--- a/src/components/PokemonCard/PokemonCard.module.css
+++ b/src/components/PokemonCard/PokemonCard.module.css
@@ -10,7 +10,7 @@
     text-shadow: 0px 0px 5px gray;
   }
   
-  .cardimg {
+  .cardImg {
     width: 100%;
     height: auto;
     margin-bottom: 0.5rem;
